--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .game-block {
-  border: 1px solid black;
+  border: 1px solid tomato;
   display: inline-block;
   width: 97.5px;
   height: 97.5px;
