--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,9 @@ body{
 
 #start{
   border-color: #2196F3;
-  color: dodgerblue
+  color: dodgerblue;
+  border-radius: 8px;
+  font-size: 20px;
 }
 
 .clearBlock{
@@ -39,5 +41,12 @@ h1{
   text-align: center;
 }
 #done{
+  border-color: #2196F3;
   text-align: right;
+  border-radius: 8px;
+  font-size: 20px;
+}
+.image1{
+background-image: url(../images/square.gif);
+
 }
